# rustweb

./: .env  Cargo.toml
migrations/20160520100926_create_posts_table/: up.sql
src/: lib.rs  models.rs
tutorials/diesel_fetch_from_api/: readme.md
