[package]
name = "rustweb"
version = "0.1.0"
authors = ["Taylor Jones <taylorjonessoftware@gmail.com>"]

[dependencies]
diesel = "0.6.2"
diesel_codegen = { version = "0.6.1", default-features = false, features = ["nightly", "postgres"] }
dotenv = "0.8.0"
dotenv_macros = "0.8.0"
hyper = "0.9.0"
rustc-serialize = "0.3"
